# lissajous

./: CHANGELOG.md  lissajous.cabal
app/: Conf.hs  Main.hs
